fix(QueryEditor): fix query stats spacings

--- a/src/containers/Tenant/QueryEditor/QueryResult/QueryResult.scss
+++ b/src/containers/Tenant/QueryEditor/QueryResult/QueryResult.scss
@@ -51,6 +51,7 @@
     }
     &__inspector {
         max-width: calc(100% - 50px);
+        padding: 15px 10px;
         @include json-tree-styles();
         &_fullscreen {
             overflow: auto;
